--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 # GeoIA Territorial v3.0
-streamlit==1.31.0
-google-generativeai==0.3.2
+streamlit
+google-generativeai
 
-# Geospatial - versiones compatibles con Streamlit Cloud
-geopandas==0.14.2
-shapely==2.0.2
-pyproj==3.6.1
+# Geospatial
+geopandas
+shapely
+pyproj
 
 # Visualization
-folium==0.15.1
-streamlit-folium==0.15.1
-matplotlib==3.8.2
+folium
+streamlit-folium
+matplotlib
 
 # Data
-pandas==2.1.4
-numpy==1.26.3
+pandas
+numpy
 
 # Documents
-PyPDF2==3.0.1
-python-docx==1.1.0
-openpyxl==3.1.2
+PyPDF2
+python-docx
+openpyxl
 
-requests==2.31.0
+requests
